kubernetes/monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-internal
  namespace: monitoring
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    secretName: grafana-internal-cert
